--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/amorypaz/amorypaz.github.io/master/19925_1638737403080423_6307842985260748770_n.jpg" alt="" /></a>
 				<!-- Tu perfil -->
 				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
 			</header>
