--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/amorypaz/amorypaz.github.io/master/19925_1638737403080423_6307842985260748770_n.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>juan Carlos </strong>, Muñoz Diaz.<br />
 			</header>
 
 		<!-- Contenido principal -->
 			<div id="main">
 					<section id="one">
 						<header class="major">
-							<!-- Tu perfil - Título -->
+							<!-- Tu perfil -->
 							<h2>Tu perfil - Título.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>Soy Juan Carlos Muñoz Díaz. He trabajado en el sector de gestión y asesoramiento de empresas durante los últimos 15 años.  licenciado en Dirección de Empresas por la Universidad Católica De Boliviana San Pablo 
+
+Ahora me dedico un Trabajaba con las Personas Más necesitadas en La Fundación Tejiendo amor y paz Fui mediador de la Mesa Consultiva de la toma Pacífica del Parque Tercer Mileno Por Los Desplazadas en Bogotá Trabaje en la Mesa Local de Desplazadas Ciudad Bolívar en La Misma ciudad Gracias a los tropezones, Aprendizajes, Retos, frustraciones Todo sobre y, a mi necedad por Seguir Adelante, hoy en día lidero. La Fundación Tejiendo amor y paz Porque Hay Más alegría en dar Que es recibir
+.</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
