--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Tu imagen -->
 				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/amorypaz/amorypaz.github.io/master/19925_1638737403080423_6307842985260748770_n.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>juan Carlos </strong>, Muñoz Diaz.<br />
+				<h1><strong>Juan Carlos </strong>, Muñoz Diaz.<br />
 			</header>
 
 		<!-- Contenido principal -->
