--- a/index.html
+++ b/index.html
@@ -42,13 +42,22 @@ Ahora me dedico un Trabajaba con las Personas Más necesitadas en La Fundación 
 							
 							<article class="6u 12u$(xsmall) work-item">
 								<!-- Tu portafolio - ¿Hacia dónde los vas a mandar? -->	
-								<a href="http://platzi.com" target="_blank" class="image fit thumb">
+								<a href="https://www.unadonacion.org/qu--hacemos-1.html" target="_blank" class="image fit thumb">
 								<!-- Tu portafolio - Su imagen -->	
 									<img src="http://miguelnieva.com/content/images/2015/09/11885383_916947578373774_670895181705337546_n.jpg"/></a>
 								<!-- Tu portafolio - Título -->	
-								<h3>Formo parte de la Comunidad Platzi.</h3>
+								<h3>Formo parte de la Fundación Amor y Paz.</h3>
 								<!-- Tu portafolio - Descripción -->	
-								<p>La comunidad profesional web más reconocida del mundo.</p>
+								<p>
+TRABAJAR COMO VOLUNTARIO
+
+Más de 7.500 personas se ofrecen como voluntarios para nosotros cada año y hacer la diferencia en las vidas de miles de personas. Averigüe cómo convertirse en nuestro socio.
+
+
+Alcanzar
+
+Trabajar con los Miembros de su comunidad y Hacer Una Diferencia
+ Durante más de  10 años,  juan carlos muñoz diaz ha dedicado su energía a defender con pasión para los miembros que padecen hambre, necesitados y políticamente su brepresentados de nuestra familia global. Descubra cómo usted puede contribuir al futuro de alguien que lo necesite a través de donaciones de dinero y tiempo. ..</p>
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
