--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@ Trabajar con los Miembros de su comunidad y Hacer Una Diferencia
 							</article>
 							
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="https://medium.com/@jessicayellow/how-do-i-deliver-a-new-content-marketing-strategy-f3a82be2c312#.9ut6yqpy3" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
-								<h3>Escribo en Medium.</h3>
-								<p>Escribo tácticas sobre cómo mejorar el marketing de tu empresa.</p>
+								<a href="https://www.unadonacion.org/donaciones.html" target="_blank" class="image fit thumb"><img src="https://cdn-images-1.medium.com/max/600/1*VaPJeQUEjZEBfq-q_Eif3A.jpeg" alt="" /></a>
+								<h3>Fundación Amor y Paz Donaciones en linia  .</h3>
+								<p>GRACIAS A TU COLABORACIÓN, MUCHAS FAMILIAS  TIENEN OPORTUNIDADES DE MEJORAR SU CALIDAD DE VIDA Y SUPERAR LA PROBLEMÁTICA QUE IMPLICA EL HECHO DE VIVIR TANTO ELLOS COMO SUS HIJOS QUE CRECEN   EN UN ENTORNO INCREÍBLEMENTE DIFÍCIL Tu aportación se invertirá en  Educación Ambiente  Alimentación saludable para niños y niñas  recreación  y deporte para niños en riesgo  delincuencia y drogadicción  protección de  animales abandonados.  Capacitación a otras ONG  Seminarios  y Talleres  de creación de   Empresa y Superación de la Pobreza para  familias más vulnerables  tanto de Colombia   como de otros países .</p>
 							</article>
 						</div>
 					</section>
